--- a/css/styles.css
+++ b/css/styles.css
@@ -47,12 +47,12 @@ body{
      width: 100%;   
 }
 
-.Spotify{
+iframe{
     position: fixed;
     bottom: 0;
     left: 0;
-    width: 100%;
-    height: 200px;
+    width:100%;
+    height: 80px;    
 }
 
 p{
@@ -60,3 +60,4 @@ p{
     text-align: center;  
     font-size: 20px;
 }
+
