--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,20 @@
+@media (max-width: 1000px) {
+    .spotify{
+          
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 50%;
+    }
+    
+    .spotify .spotifyy{
+        width: 60%;
+ 
+    }
+}  
+  
 body{
+    align-items: center;
     background:#3F87BB;
     color:#ffffff;
     font-family: 'Roboto', sans-serif
@@ -41,18 +57,11 @@ body{
     text-align: center;  
     font-size: 20px; 
 }
+
 .subseccion{
      text-align: center;
      display: inline-block;
      width: 100%;   
-}
-
-iframe{
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width:100%;
-    height: 80px;    
 }
 
 p{
@@ -61,3 +70,14 @@ p{
     font-size: 20px;
 }
 
+.spotify {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+}
+
+iframe{
+    width: 60%;
+}
