--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,7 @@ header{
     align-items: center;
     justify-content: space-between;
     padding: 1.5rem;
-    background-color: #af0576ea;   
+    background-color: #ff00aa;   
     width: 100%;  
     top: 0;       
     position: fixed;
