--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,11 @@
     outline: 0;
     box-sizing: border-box;
 }
+body {
+    min-height: 100%;
+    font-family: 'Roboto', sans-serif;
+    color:#ffffff;
+}
 .container{   
     background-color: #000000a9;
     position: fixed;
@@ -45,8 +50,7 @@
     padding-bottom: calc(100% - 2rem);
     box-shadow: 0 0 0 0 #fff;
 }
-
-  @keyframes pulsIn {
+@keyframes pulsIn {
     0% {
       box-shadow: inset 0 0 0 1rem #fff;
       opacity: 1;
@@ -55,9 +59,8 @@
       box-shadow: inset 0 0 0 0 #fff;
       opacity: 0;
     }
-  }
-
-  @keyframes pulsOut {
+}
+@keyframes pulsOut {
     0%, 50% {
       box-shadow: 0 0 0 0 #fff;
       opacity: 0;
@@ -66,32 +69,6 @@
       box-shadow: 0 0 0 1rem #fff;
       opacity: 1;
     }
-}      
-@media screen and (max-width:550px){     
-    .spotify-embeds {        
-        width: 100%;
-        bottom: 0;
-        left: 0;
-        position: fixed;       
-        display: flex;
-        justify-content: center;
-        align-items: center;     
-    }    
-    .spotify-embed {
-        width: 95%;
-        margin-bottom: 5px;
-    }  
-    .spotify-embed iframe {
-        display: block;
-        width: 100%;
-        transition: opacity 0.125s;
-    }     
-}
-body {
-    min-height: 100%;
-    background: url(/img/Backrground.png);
-    font-family: 'Roboto', sans-serif;
-    color:#ffffff;
 }
 .spotify-embeds {
     width: 100%;
@@ -116,67 +93,15 @@ body {
 .js .spotify-embed iframe.loaded {
     opacity: 1;    
 }
-.titulos{
-    text-align:center;
-    font-size: 70px;
-    width: 100%;   
-    font-weight: bolder;
-    margin-top: 2em; 
-}
 .heart{    
     font-size: 50px;
     text-align: center;    
-}
-.subtitulos{
-    text-align: center;
-    font-style: italic;
-    width: 100%;    
-    font-size: 30px;
-    font-weight: bolder; 
-    background-color: #ff00aa52;
-}
-.Seccion{
-    text-align: center;
-    display: inline-block;
-    width: 100%;    
-}
-.JF{    
-    display: inline-block;
-    text-align: center; 
-    padding: 4px 4px 4px 4px;
-    border:  2px solid;
-    background-color: #ffffff; 
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-.JF_V{
-    display: inline-block;
-    text-align: center;
-    padding: 4px 4px 4px 4px;
-    border:  2px solid;
-    background-color: #ffff; 
-    margin-top: 3px;
-}
-.contenido {
-    font-style: italic;
-    text-align: center;  
-    font-size: 20px; 
-    margin-bottom: 15px;
-    background: #0000007c;
-    font-weight: bold;
-    color: #ffffff;
-    
-}
-.subseccion{
-     text-align: center;
-     display: inline-block;
-     width: 100%;   
 }
 header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1.5rem;
+    padding: 1rem;
     background-color: #ff00aa;   
     width: 100%;  
     top: 0;       
@@ -197,6 +122,10 @@ header{
 .nav-list li a{
     text-decoration: none;
     color: #ffffff;
+    padding: 0.7em;
+    margin: auto;
+    border: 1px solid #ffffff ;
+    border-radius: 60px;
 }
 .abrirMenu,
 .cerrarMenu{
@@ -207,12 +136,113 @@ header{
     text-decoration: none;
     font-size: 30px;
     color: #ffffff;
+       
 }
 .icon{
    font-size: 30px;
    color: #ffffff;
    display: block;
 }
+h1{
+    font-family:'Times New Roman', Times, serif;
+    text-align:center;
+    font-size: 70px;
+    width: 100%;   
+    font-weight: bolder;
+    margin-bottom: 0.5em;  
+}
+.heart{        
+    font-size: 50px;
+    text-align: center;
+    margin-bottom: 0.5em;     
+}
+em{
+    font-family:'Times New Roman', Times, serif;
+    font-size: 18px;
+    text-align: center;
+}
+.banner{
+    width: 100%;
+    height:800px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    background: center fixed url(/img/Backrground.png);
+}
+.subtitulo{
+    text-align: center;
+    background-color: #ff00aa52;
+}
+.banner2{
+    width: 100%;
+    height:auto;
+    background: center fixed url(/img/Backrground2.png);
+}
+.banner3{
+    width: 100%;
+    height:auto;
+    background:  center fixed url(/img/Backrground3.png);
+}
+.banner4{
+    width: 100%;
+    height:auto;
+    background:  center fixed url(/img/Backrground4.png);
+}
+.banner5{
+    width: 100%;
+    height: auto;
+    background:center fixed url(/img/Backrground5.png) ;
+}
+.banner6{
+    width: 100%;
+    height: auto;
+    background: center fixed url(/img/Backrground6.png);
+}
+.banner7{
+    width: 100%;
+    height: auto;
+    background: center fixed url(/img/Backrground7.png);
+}
+.banner8{
+    width: 100%;
+    height: auto;
+    background: center fixed url(/img/Backrground8.png);
+}
+.images{    
+    display: inline-block;
+    text-align: center;  
+}
+.JF{    
+    display: inline-block;
+    text-align: center; 
+    padding: 4px 4px 4px 4px;
+    border:  3px solid;
+    background-color: #fff; 
+    margin-top: 15px;
+    margin-bottom: 15px;
+   
+}
+.content{
+    width: 100%;
+    margin: 0 auto;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+    font-size: 38px;    
+}
+.banner_cont{
+    width: 100%;
+}
+p{
+    background: #0000003a;
+}
+.pie{
+    background: #ff00aa;
+    width: 100%;
+    height: 100px;
+}
+
+/*PHONES*/
 @media screen and (max-width: 550px){
 .abrirMenu,
 .cerrarMenu{
@@ -256,10 +286,35 @@ header{
 }
 .nav-list{
     flex-direction: column;
-    align-items: end;    
+    align-items: end;
 }
 .nav-list li a{
     color: #ffffff;
-    font-size: 2rem;
+    font-size: 1.5rem;
+    padding: 0.2em;
+    margin: auto;
+    border: 2px solid #ffffff ;
+    border-radius: 50px;
 }
+li{
+    padding: 5px 0;
+}
+.spotify-embeds {        
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    position: fixed;       
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+}    
+.spotify-embed {
+    width: 95%;
+    margin-bottom: 5px;
+}  
+.spotify-embed iframe {
+    display: block;
+    width: 100%;
+    transition: opacity 0.125s;
+}   
 }
